# corewar

./: ._42.cor  ._src  .gitignore  .nfs.200515bd.f78a  .nfs.20051e93.6685  42.cor  CMakeLists.txt  Makefile  README.MD  author  corewar  corewar.h  ex.cor  init_struct.c  main.c  my.out.txt  nekit_main.c  notes  op.c  op.h  struct.h  test.sh  their.out.txt
assembler/: ._helltrain.s  .asm0.c.swp  asm.h  ex.cor  ex.s  hell.cor  hell.s  helltrain.s  main.c  myasm.cor  op.h  zork.cor  zork.s
assembler/assembler/: ._asm.c  ._asm.h  ._asm0.c  ._asm1.c  ._asm10.c  ._asm11.c  ._asm2.c  ._asm3.c  ._asm4.c  ._asm5.c  ._asm6.c  ._asm7.c  ._asm8.c  ._asm9.c  ._examplecor  ._examples  ._libft  ._libft.h  ._zork.cor  asm  (+24 more)
operations_tests/: 11_sti_RDD.cor  11_sti_RDD.s  13_lld_DR.cor  13_lld_DR.s  14_lldi_DDR.cor  14_lldi_DDR.s  14_lldi_DRR.s  5_sub_RRR_no_zjmp.cor  5_sub_RRR_no_zjmp.s  5_sub_RRR_with_zjmp.cor  5_sub_RRR_with_zjmp.s  bad_magic.cor  bad_prog_size.cor  big_op.cor  empty_with_zero_op.cor  empty_without_opcode.cor  make_all.sh  nyatsulk_bot.cor  nyatsulk_bot.s  small_op.cor
src/: ._asm  ._corewar  ex.cor
viz/: .drawing.c.swp  bots_draw.c  drawing.c  fill_memory.c  pause.c  set_values.c  set_values_2.c  start_draw.c  viz.h
vm/: func1.c  func10.c  func11.c  func2.c  func3.c  func4.c  func5.c  func6.c  func7.c  func8.c  func9.c  functions.c  hex_print.c  nekit_main.c
vm_valid/: a.out  valid_file_cmd_name.c  valid_file_data.c~  vm_file_data_check.c  vm_parse_data.c  vm_parse_data2.c  vm_save_data_bot.c  vm_valid_cmd_file.c  vm_valid_file_data.c  vm_valid_file_data.c~
(+23 files in other folders)
